fixing bug that I added while linting lol

--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -56,7 +56,7 @@
                     <span *ngIf="selectedWrapper.type === 'drug'">Drug</span>
                   </span>
                 </h6>
-                <app-info-tile [wrapper]="selectedWrapper" [wrapper_cancer_types]="selectedWrapperCancerTypes"></app-info-tile>
+                <app-info-tile [wrapper]="selectedWrapper" [wrapperCancerTypes]="selectedWrapperCancerTypes"></app-info-tile>
               </div>
 
               <div class="card-image" id="canvas-content">
