--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -29,15 +29,15 @@
                 <h6 class="is-6">
                   <span class="icon">
                     <i *ngIf="!selectedWrapper" class="fas fa-info" aria-hidden="true"></i>
-                    <i *ngIf="selectedWrapper && selectedWrapper.type === 'node'" class="fas fa-dna" aria-hidden="true"></i>
-                    <i *ngIf="selectedWrapper && selectedWrapper.type === 'cancerNode'" class="fas fa-disease"
+                    <i *ngIf="selectedWrapper && selectedWrapper.type === 'Node'" class="fas fa-dna" aria-hidden="true"></i>
+                    <i *ngIf="selectedWrapper && selectedWrapper.type === 'CancerNode'" class="fas fa-disease"
                        aria-hidden="true"></i>
-                    <i *ngIf="selectedWrapper && selectedWrapper.type === 'drug'" class="fas fa-capsules"
+                    <i *ngIf="selectedWrapper && selectedWrapper.type === 'Drug'" class="fas fa-capsules"
                        aria-hidden="true"></i>
                   </span>
                   <span *ngIf="!selectedWrapper">No item selected</span>
                   <span *ngIf="selectedWrapper">
-                    <span *ngIf="selectedWrapper.type === 'node'">
+                    <span *ngIf="selectedWrapper.type === 'Node'">
                       <span *ngIf="currentDataLevel === 'gene'">
                         Gene
                       </span>
@@ -45,7 +45,7 @@
                         Protein
                       </span>
                     </span>
-                    <span *ngIf="selectedWrapper.type === 'cancerNode'">
+                    <span *ngIf="selectedWrapper.type === 'CancerNode'">
                       <span *ngIf="currentDataLevel === 'gene'">
                         Cancer Driver Gene
                       </span>
@@ -53,7 +53,7 @@
                         Cancer Protein
                       </span>
                     </span>
-                    <span *ngIf="selectedWrapper.type === 'drug'">Drug</span>
+                    <span *ngIf="selectedWrapper.type === 'Drug'">Drug</span>
                   </span>
                 </h6>
                 <app-info-tile [wrapper]="selectedWrapper" [wrapperCancerTypes]="selectedWrapperCancerTypes"></app-info-tile>
@@ -449,12 +449,12 @@
               <tr *ngFor="let g of analysis.getSelection()">
                 <td>
                  <span class="icon">
-                    <i class="fa fa-dna" *ngIf="g.type == 'node'"></i>
-                    <i class="fa fa-disease" *ngIf="g.type =='cancerNode'"></i>
+                    <i class="fa fa-dna" *ngIf="g.type == 'Node'"></i>
+                    <i class="fa fa-disease" *ngIf="g.type =='CancerNode'"></i>
                   </span>
                 </td>
-                <td *ngIf="g.type == 'cancerNode'">{{g.data.name}}</td>
-                <td *ngIf="g.type == 'node'">{{g.data.name}}</td>
+                <td *ngIf="g.type == 'CancerNode'">{{g.data.name}}</td>
+                <td *ngIf="g.type == 'Node'">{{g.data.name}}</td>
                 <td>
                   <button (click)="analysis.removeItems([g])" class="button is-small is-danger is-outlined has-tooltip"
                           data-tooltip="Remove from selection.">
@@ -478,7 +478,7 @@
               <span *ngIf="currentDataLevel=='gene'">Add genes</span>
               <span *ngIf="currentDataLevel=='protein'">Add proteins</span>
             </a>
-            <a (click)="analysis.removeAllGenes()"
+            <a (click)="analysis.removeAllNodes()"
                class="card-footer-item has-text-danger" data-tooltip="Remove all genes.">
             <span class="icon">
               <i class="fa fa-minus"></i>
@@ -497,7 +497,7 @@
               <span *ngIf="currentDataLevel=='gene'">Add cancer driver genes</span>
               <span *ngIf="currentDataLevel=='protein'">Add cancer proteins</span>
             </a>
-            <a (click)="analysis.removeAllCancerDriverGenes()"
+            <a (click)="analysis.removeAllCancerDriverNodes()"
                class="card-footer-item has-text-danger" data-tooltip="Remove all cancer driver genes.">
             <span class="icon">
               <i class="fa fa-minus"></i>
