fix layout for cancer type selector and submit button

--- a/src/app/components/info-tile/info-tile.component.html
+++ b/src/app/components/info-tile/info-tile.component.html
@@ -41,7 +41,7 @@
     </ng-container>
 
     <ng-container *ngIf="wrapperComorbidities">
-      <b><span>Comorbidities ({{ wrapperComorbidities.length }}:</span></b>
+      <b><span>Comorbidities ({{ wrapperComorbidities.length }}):</span></b>
       <div class="content scroll-300">
         <ul *ngFor="let item of wrapperComorbidities">
           <li>{{ item.diseaseName }}</li>
