--- a/src/app/components/analysis-panel/analysis-panel.component.html
+++ b/src/app/components/analysis-panel/analysis-panel.component.html
@@ -441,6 +441,14 @@
                 Name
                 <p-sortIcon [field]="'name'"></p-sortIcon>
               </th>
+              <th [pSortableColumn]="'entrezId'">
+                Entrez ID
+                <p-sortIcon [field]="'entrezId'"></p-sortIcon>
+              </th>
+              <th [pSortableColumn]="'cancerOccurrences'">
+                Cancer Occurrences
+                <p-sortIcon [field]="'cancerOccurrences'"></p-sortIcon>
+              </th>
               <th [pSortableColumn]="'type'">
                 Cancer Type
                 <p-sortIcon [field]="'type'"></p-sortIcon>
@@ -461,8 +469,10 @@
                 <p-tableCheckbox [value]="e"></p-tableCheckbox>
               </td>
               <td>{{e.name}}</td>
+              <td>{{e.entrezId}}</td>
+              <td>{{e.cancerOccurrences}}</td>
               <td>{{e.type}}</td>
-              <td *ngIf="tableHasScores">{{e.score | number}}</td>
+              <td *ngIf="tableHasScores">{{ e.rawScore | number }}</td>
               <td>
                 <span *ngIf="e.isSeed">
                   <i class="fa fa-asterisk has-text-primary"></i>
