--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,10 +16,8 @@ $info: $primary;
 @import "~primeng/resources/primeng.min.css";
 @import "~primeicons/primeicons.css";
 
-$sidebar-width: 37vw;
-$navbar-height: 60px;
-$row-data-selector-height: auto;
-$network-footer-height: 75px;
+@import "scaffold";
+
 
 html {
   overflow: hidden;
