all find drug target tasks working

--- a/src/app/components/analysis-panel/analysis-panel.component.scss
+++ b/src/app/components/analysis-panel/analysis-panel.component.scss
@@ -3,7 +3,8 @@
 .analysis {
   position: absolute;
   height: 100%;
-  width: 100%;
+  width: calc(100% - #{$sidebar-width});
+  margin-left: $sidebar-width;
   top: $navbar-height;
 }
 
