--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -1,7 +1,12 @@
 <div class="is-hidden-mobile">
   <app-launch-analysis [(show)]="showAnalysisDialog"
                        [target]="analysisDialogTarget"
-                       [dataset]="selectedDataset">
+                       [dataset]="selectedDataset"
+                       [selectedDataset]="selectedDataset"
+                       [selectedGeneInteractionDataset]="selectedInteractionDataset"
+                       [selectedDrugInteractionDataset]="selectedInteractionDataset"
+                       [selectedCancerTypeItems]="selectedCancerTypeItems"
+  >
   </app-launch-analysis>
 
   <app-custom-genes [(show)]="showCustomGenesDialog" [visibleNodes]="currentViewNodes">
